Fixed alignment off items on smaller screens

--- a/forum/wwwroot/css/shared/SearchField.css
+++ b/forum/wwwroot/css/shared/SearchField.css
@@ -2,7 +2,7 @@
     .search-field-inner-container {
         display: flex;
         flex-direction: row;
-        align-items: center;
+        align-items: end;
         gap: 24px;
     }
 }
